--- a/middleware/configuration/makefile.cmk
+++ b/middleware/configuration/makefile.cmk
@@ -28,15 +28,15 @@ lib_configuration = make.LinkLibrary( 'bin/casual-configuration',
         make.Compile( 'source/common.cpp'),
         make.Compile( 'source/user.cpp'),
         make.Compile( 'source/model.cpp'),
+        make.Compile( 'source/system.cpp'),
         make.Compile( 'source/user/environment.cpp'),
         make.Compile( 'source/model/transform.cpp'),
         make.Compile( 'source/model/load.cpp'),
         make.Compile( 'source/model/validate.cpp'),
         
-        make.Compile( 'source/build/server.cpp'),
-        make.Compile( 'source/build/executable.cpp'),
-        
-        make.Compile( 'source/resource/property.cpp'),
+        make.Compile( 'source/build/model.cpp'),
+        make.Compile( 'source/build/model/load.cpp'),
+      
     ],
     ['casual-common',
     'casual-serviceframework'])
@@ -59,10 +59,8 @@ install_libs.append( target)
 
 example_archive = make.LinkArchive( 'bin/casual-configuration-example', 
      [
-         make.Compile( 'source/example/domain.cpp'),
-         make.Compile( 'source/example/resource/property.cpp'),
-         make.Compile( 'source/example/build/server.cpp'),
-         make.Compile( 'source/example/build/executable.cpp'),
+         make.Compile( 'source/example/model.cpp'),
+         make.Compile( 'source/example/build/model.cpp'),
      ])
 
 # Unittest
@@ -71,13 +69,12 @@ make.LinkUnittest( 'bin/test-casual-configuration',
         make.Compile( 'unittest/source/test_model.cpp'),
         make.Compile( 'unittest/source/test_environment.cpp'),
         
-        make.Compile( 'unittest/source/resource/test_property.cpp'),
-        make.Compile( 'unittest/source/build/test_server.cpp'),
-        #make.Compile( 'unittest/source/user/test_accumulate.cpp'),
+        make.Compile( 'unittest/source/test_build.cpp'),
         make.Compile( 'unittest/source/user/test_validate.cpp'),
 
         make.Compile( 'unittest/source/user/test_backward.cpp'),
         make.Compile( 'unittest/source/model/test_validate.cpp'),
+        make.Compile( 'unittest/source/model/test_system.cpp'),
    ],
    [ 
        example_archive, 
