transaction - fix distributed commit when RM fails -> rollback
* manager uses the same correlation for rollback reply
  When a rollback request arrives, we need to use the same correlation id
  for the reply.

* context also listen to rollback::Reply during commit
  When commit is called, and the prepare phase fails a rollback::Reply is
  sent from TM, and context now handles the two messages.

Also added complex topology that test transactions

...in test/test_gateway.cpp since the tests focus on transactions over
gateway boundaries.

--- a/middleware/example/server/source/example/resource.services.yaml
+++ b/middleware/example/server/source/example/resource.services.yaml
@@ -28,3 +28,7 @@ server:
       function: casual_example_resource_echo
       transaction: branch
 
+    - name: casual/example/resource/domain/name
+      function: casual_example_resource_domain_name
+
+
