--- a/middleware/transaction/makefile.cmk
+++ b/middleware/transaction/makefile.cmk
@@ -101,6 +101,17 @@ target = make.LinkExecutable( 'bin/rm-proxy-casual-mockup',
 
 install_bin.append( target)
 
+unittest_library = make.LinkLibrary( 'bin/casual-transaction-unittest',
+    [ 
+        make.Compile( 'source/unittest/utility.cpp')
+    ],
+    [
+        'casual-common',
+        'casual-serviceframework', 
+    ]
+)
+
+
 # unittest
 test_transaction = make.LinkUnittest( 'bin/test-casual-transaction',
     [
@@ -111,7 +122,8 @@ test_transaction = make.LinkUnittest( 'bin/test-casual-transaction',
         
     ],
     [ 
-        manager_archive, 
+        manager_archive,
+        unittest_library,
         'casual-common', 
         'casual-serviceframework', 
         'casual-configuration', 
