--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -9,6 +9,7 @@ make.IncludePaths( ['include',
     '../middleware/configuration/include',
     '../middleware/domain/include',
     '../middleware/gateway/include',
+    '../middleware/transaction/include',
     '../middleware/service/include',
     '../middleware/xatmi/include',
     '../middleware/queue/include',
@@ -77,6 +78,7 @@ make.LinkUnittest( 'unittest/bin/test-casual',
       'casual-mockup-rm',
       'casual-domain-unittest',
       'casual-service-unittest',
+      'casual-transaction-unittest',
       'casual-configuration',
       'casual-domain-admin-cli',
       'casual-serviceframework',
