--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -172,6 +172,11 @@ protocol_objects = [
     make.Compile( 'source/documentation/protocol/example.cpp')
 ]
 
+unittest_archive = make.LinkArchive( 'bin/casual-gateway-unittest',
+    [
+        make.Compile( 'unittest/source/utility.cpp'),
+    ]
+)
 
 # Unittest
 
