gateway - make gateway inbound respect excluded services and queues
Filters away all services and queues that matches exclude patterns from
an external discovery request.

--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -85,6 +85,7 @@ make.LinkUnittest( 'unittest/bin/test-casual',
       'casual-buffer',
       'casual-xatmi', 
       'casual-queue-api',
+      'casual-queue-common',
       'casual-unittest',
       'casual-mockup-rm',
       'casual-domain-unittest',
