gateway - improve protocol versioning to make it easier to add messages
The messages "knows" what version they at least need to be relevant. A
lot better than other stuff "just knows it".

Added abstractions to query a message-type what version it "needs".

Also:
* some improvements in the protocol documentation
* added casual::gateway::message::domain::disconnect::(Request|Reply) to
  the documentation (v1.1)

--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -44,6 +44,7 @@ common_archive = make.LinkArchive( 'bin/casual-gateway-common',
         make.Compile( 'source/common.cpp'),
         make.Compile( 'source/manager/state.cpp'),
         make.Compile( 'source/group/tcp.cpp'),
+        make.Compile( 'source/message/protocol.cpp'),
     ])
         
 
@@ -203,6 +204,7 @@ target = make.LinkExecutable( "bin/casual-gateway-markdown-protocol",
         make.Compile( 'source/documentation/protocol/markdown.cpp')
     ] + protocol_objects,
     [
+        common_archive,
         'casual-common'
     ])
 
@@ -213,6 +215,7 @@ target = make.LinkExecutable( "bin/casual-gateway-binary-protocol",
         make.Compile( 'source/documentation/protocol/binary.cpp')
     ] + protocol_objects,
     [
+        common_archive,
         'casual-common'
     ])
 
