--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -1,3 +1,4 @@
+import unittest
 import casual.make.api as make
 import casual.middleware.make.api as dsl
 
@@ -171,25 +172,31 @@ protocol_objects = [
 
 # Unittest
 
+unittest_archive = make.LinkArchive( 'bin/casual-gateway-unittest', 
+    [
+        make.Compile( 'unittest/source/utility.cpp'),
+    ]
+)
+
 target_unittest = make.LinkUnittest( 'bin/test-casual-gateway',
    [
-        make.Compile( 'unittest/source/utility.cpp'),
         make.Compile( 'unittest/source/test_manager.cpp'),
         make.Compile( 'unittest/source/test_protocol.cpp'),
         make.Compile( 'unittest/source/group/outbound/test_state.cpp'),
         make.Compile( 'unittest/source/test_reverse.cpp'),
    ] + protocol_objects, 
-   [ 
-       outbound_archive,
-       common_archive, 
-       'casual-serviceframework',
-       'casual-queue-api',
-       'casual-common',
-       'casual-domain-discovery',
-       'casual-configuration',
-       'casual-unittest',
-       'casual-domain-unittest',
-       'casual-service-unittest',
+   [    
+        unittest_archive,
+        outbound_archive,
+        common_archive, 
+        'casual-serviceframework',
+        'casual-queue-api',
+        'casual-common',
+        'casual-domain-discovery',
+        'casual-configuration',
+        'casual-unittest',
+        'casual-domain-unittest',
+        'casual-service-unittest',
     ]) 
 
 # Make sure we link the executables before we run the unittest
