--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -9,6 +9,7 @@ make.IncludePaths( ['include',
     '../middleware/configuration/include',
     '../middleware/domain/include',
     '../middleware/gateway/include',
+    '../middleware/gateway/unittest/include',
     '../middleware/transaction/include',
     '../middleware/service/include',
     '../middleware/service/unittest/include',
@@ -27,6 +28,7 @@ make.LibraryPaths( [ 'bin',
     '../middleware/queue/bin',
     '../middleware/buffer/bin',
     '../middleware/transaction/bin',
+    '../middleware/gateway/bin',
     '../middleware/serviceframework/bin',
     '../middleware/configuration/bin',
     '../middleware/http/bin']
@@ -78,8 +80,10 @@ make.LinkUnittest( 'unittest/bin/test-casual',
       'casual-unittest',
       'casual-mockup-rm',
       'casual-domain-unittest',
+      'casual-domain-discovery',
       'casual-service-unittest',
       'casual-transaction-unittest',
+      'casual-gateway-unittest',
       'casual-configuration',
       'casual-domain-admin-cli',
       'casual-serviceframework',
