unittest: refactoring, managers has unittest/utility.h that tests uses
Cleaned up a lot of _local abstractions_ and used stuff that the
"managers" provided in their _unittest/utility.h_.

--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -10,6 +10,7 @@ make.IncludePaths( [
     '../serviceframework/include',
     '../common/include',
     '../domain/include',
+    '../domain/unittest/include',
     '../service/include',
     '../queue/include',
     '../transaction/include',
