--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -9,7 +9,9 @@ make.IncludePaths([
     'unittest/include',
     '../common/include',
     '../configuration/include',
+    '../configuration/unittest/include',
     '../domain/include',
+    '../domain/unittest/include',
     '../service/include',
     '../queue/include',
     '../xatmi/include',
