--- a/middleware/transaction/makefile.cmk
+++ b/middleware/transaction/makefile.cmk
@@ -5,7 +5,9 @@ make.IncludePaths( ['include',
     '../common/include',
     '../xatmi/include',
     '../configuration/include',
+    '../configuration/unittest/include',
     '../domain/include',
+    '../domain/unittest/include',
     '../cli/include',
     '../serviceframework/include',
     '../../thirdparty/database/include']
