--- a/middleware/event/makefile.cmk
+++ b/middleware/event/makefile.cmk
@@ -7,6 +7,7 @@ make.IncludePaths([
 	'../serviceframework/include',
 	'../xatmi/include',
    '../domain/include',
+   '../domain/unittest/include',
 	'../../thirdparty/database/include']
     + make.optional_include_paths()
     + dsl.paths().include.gtest
