--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -117,7 +117,7 @@ casual_common_objectfiles = [
     make.Compile( 'source/code/serialize.cpp'),
 
     
-    make.Compile( 'source/exception/handle.cpp'),
+    make.Compile( 'source/exception/capture.cpp'),
     make.Compile( 'source/exception/guard.cpp'),
 
     make.Compile( 'source/environment.cpp'),
