--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -129,6 +129,8 @@ casual_common_objectfiles = [
 
     make.Compile( 'source/signal.cpp'),
     make.Compile( 'source/signal/timer.cpp'),
+
+    make.Compile( 'source/build.cpp'),
     
     make.Compile( 'source/chronology.cpp'),
     make.Compile( 'source/process.cpp'),
