--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -94,7 +94,8 @@ unittest_lib = make.LinkLibrary( 'bin/casual-administration-unittest',
 
 make.LinkUnittest( 'unittest/bin/test-casual-administration',
    [
-      make.Compile( 'unittest/source/cli/test_call.cpp')
+      make.Compile( 'unittest/source/cli/test_call.cpp'),
+      make.Compile( 'unittest/source/cli/test_domain_manager.cpp')
    ],
    [ 
       unittest_lib,
