gateway - use multiplexing on the tcp-connection phase
These are the (happy) phases we use after this fix:

* non-blocking tcp connect
* pselect on write for the file descriptor
* "notify" from pselect when connect is "done"
* check if the socket has any errors, if not the tcp connection is
  established
* start the logical connection phase, negotiate protocol version and
  stuff. This is done by a dedicated process
* the logical connection report "success" or "fail"
* on "success" the real useful connection is established.

--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -47,6 +47,7 @@ common_archive = make.LinkArchive( 'bin/casual-gateway-common',
         make.Compile( 'source/common.cpp'),
         make.Compile( 'source/manager/state.cpp'),
         make.Compile( 'source/group/tcp.cpp'),
+        make.Compile( 'source/group/tcp/logical/connect.cpp'),
         make.Compile( 'source/message/protocol.cpp'),
     ])
         
@@ -155,9 +156,9 @@ target = make.LinkExecutable( 'bin/casual-gateway-inbound-reverse-group',
      
 install_bin.append( target)
 
-target = make.LinkExecutable( 'bin/casual-gateway-group-tcp-connector',
+target = make.LinkExecutable( 'bin/casual-gateway-group-tcp-logical-connect',
     [
-        make.Compile( 'source/group/tcp/connector/main.cpp')
+        make.Compile( 'source/group/tcp/logical/connect/main.cpp')
     ],
     [
         common_archive,
