refactoring - transaction::Context uses more type safe types
Also:
* a few enums got std::string_view description()...
* moved transaction unittest utility in the correct place
* some other minor changes

--- a/middleware/transaction/makefile.cmk
+++ b/middleware/transaction/makefile.cmk
@@ -2,6 +2,7 @@ import casual.make.api as make
 import casual.middleware.make.api as dsl
     
 make.IncludePaths( ['include',
+    'unittest/include',
     '../common/include',
     '../xatmi/include',
     '../configuration/include',
@@ -105,7 +106,7 @@ install_bin.append( target)
 
 unittest_library = make.LinkLibrary( 'bin/casual-transaction-unittest',
     [ 
-        make.Compile( 'source/unittest/utility.cpp')
+        make.Compile( 'unittest/source/utility.cpp')
     ],
     [
         'casual-common',
