--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -13,6 +13,7 @@ make.IncludePaths( ['include',
     '../middleware/gateway/include',
     '../middleware/gateway/unittest/include',
     '../middleware/transaction/include',
+    '../middleware/transaction/unittest/include',
     '../middleware/service/include',
     '../middleware/service/unittest/include',
     '../middleware/xatmi/include',
