spelling - corrected a lot of spelling mistakes
Also, added words that are relevant for `casual`, but not in the
dictionary (_middleware/example/ide/user/settings.json_). This file can
be used directly by copy it to the correct `vscode` directory, or append
parts from it to a existing _vscode-settings-file_.

--- a/middleware/cli/makefile.cmk
+++ b/middleware/cli/makefile.cmk
@@ -15,8 +15,8 @@ make.LibraryPaths([
     make.optional_library_paths()
    )
 
-intall_lib = []
-intall_bin = []
+install_lib = []
+install_bin = []
 
 
 
@@ -30,12 +30,12 @@ lib_cli = make.LinkLibrary( 'bin/casual-cli',
     ])
 
 
-intall_lib.append( lib_cli)
+install_lib.append( lib_cli)
 
 
 
 # Install
-make.Install( intall_lib, dsl.paths().install + '/lib')
-make.Install( intall_bin, dsl.paths().install + '/bin')
+make.Install( install_lib, dsl.paths().install + '/lib')
+make.Install( install_bin, dsl.paths().install + '/bin')
 
 
