configuration - fix configuration normalize
Before:
We produced the internal model instead of _users model_, which is not
something the user should see/know about. The internal model is of
course not compatible with the _user model_, hence the output of
`--normalize` could not be piped to other cli stuff.

After:
We produce _user model_ and added tests for normalize

--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -95,7 +95,8 @@ unittest_lib = make.LinkLibrary( 'bin/casual-administration-unittest',
 make.LinkUnittest( 'unittest/bin/test-casual-administration',
    [
       make.Compile( 'unittest/source/cli/test_call.cpp'),
-      make.Compile( 'unittest/source/cli/test_domain_manager.cpp')
+      make.Compile( 'unittest/source/cli/test_domain_manager.cpp'),
+      make.Compile( 'unittest/source/cli/test_configuration_normalize.cpp')
    ],
    [ 
       unittest_lib,
