queue - add lookup restrictions depending on caller location
We take three "locations" in consideration:

* 'local': the lookup is done from within the domain, some client, och
  server instigate the lookup.
   * local queues: OK
   * remote queues: OK
   * unknown queues (does a discover): OK
* 'external': the lookup is done by an inbound
   * local queues: OK
   * remote queues: _absent-queue_
   * unknown queues: _absent-queue_
* 'external-with-forward-discovery': the lookup is done by an inbound
  that has `discovery.forward=true` configured.
   * local queues: OK
   * remote queues: OK
   * unknown queues: _absent-queue_

--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -69,6 +69,7 @@ unittest_object = [
     make.Compile( 'unittest/source/gateway/test_reverse.cpp'),
     make.Compile( 'unittest/source/gateway/test_discovery.cpp'),
     make.Compile( 'unittest/source/test_service.cpp'),
+    make.Compile( 'unittest/source/test_queue.cpp'),
     make.Compile( 'unittest/source/test_assassinate.cpp'),
     make.Compile( 'unittest/source/xatmi/test_conversation.cpp'),
 ]
