--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -94,7 +94,8 @@ casual_common_objectfiles = [
     make.Compile( 'source/communication/stream.cpp'),
     make.Compile( 'source/communication/log.cpp'),
 
-    make.Compile( 'source/message/type.cpp'),    
+    make.Compile( 'source/message/dispatch.cpp'),
+    make.Compile( 'source/message/type.cpp'), 
     make.Compile( 'source/message/handle.cpp'),
     make.Compile( 'source/message/pending.cpp'),
     make.Compile( 'source/message/event.cpp'),
