transaction - list external resources from cli
added cli option --list-external-resources: lists id, alias and pid
of known external resources

--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -38,7 +38,8 @@ make.LibraryPaths( [ 'bin',
     '../middleware/configuration/bin',
     '../middleware/http/bin',
     '../middleware/administration/bin',
-    '../middleware/cli/bin']
+    '../middleware/cli/bin',
+    '../middleware/tools/bin']
     + make.optional_library_paths()
     + dsl.paths().library.gtest
    )
