--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -55,9 +55,8 @@ manager_archive = make.LinkArchive( 'bin/casual-domain-manager',
 ])
 
 # utility for other 'managers'
-pending_library = make.LinkLibrary( 'bin/casual-domain-utility',
+utility_library = make.LinkLibrary( 'bin/casual-domain-utility',
     [
-        make.Compile( 'source/pending/message/send.cpp'),
         make.Compile( 'source/configuration/fetch.cpp'),
     ],
     [
@@ -66,7 +65,7 @@ pending_library = make.LinkLibrary( 'bin/casual-domain-utility',
         'casual-serviceframework'
      ]
 )
-install_libs.append( pending_library)
+install_libs.append( utility_library)
 
 
 target_domain_manager = make.LinkExecutable( 'bin/casual-domain-manager',
@@ -75,7 +74,7 @@ target_domain_manager = make.LinkExecutable( 'bin/casual-domain-manager',
     ],
     [
      manager_archive,
-     pending_library,
+     utility_library,
      common_library,
      'casual-common',
      'casual-configuration',
@@ -164,23 +163,6 @@ target = make.LinkLibrary( 'bin/casual-domain-discovery-admin-cli',
 
 install_libs.append( target)
 
-# pending send
-pending_executable = make.LinkExecutable( 'bin/casual-domain-pending-message',
-    [
-      make.Compile( 'source/pending/message/main.cpp'),
-    ],
-    [
-     pending_library,
-     common_library,
-     'casual-common',
-     'casual-configuration',
-     'casual-serviceframework'
-    ] 
-)
-
-install_bins.append( pending_executable)
-
-
 
 #unittest lib for other modules to use (in unittest)
 domain_unittest_library = make.LinkLibrary( 'bin/casual-domain-unittest',
@@ -214,7 +196,6 @@ target_test_domain = make.LinkUnittest( 'bin/test-casual-domain',
         make.Compile( 'unittest/source/manager/test_state.cpp'),
         make.Compile( 'unittest/source/manager/test_manager.cpp'),
         make.Compile( 'unittest/source/manager/test_api.cpp'),
-        make.Compile( 'unittest/source/pending/test_message.cpp'),
         make.Compile( 'unittest/source/test_discovery.cpp'),
     ],
     [
@@ -222,7 +203,7 @@ target_test_domain = make.LinkUnittest( 'bin/test-casual-domain',
         common_library,
         domain_discovery_library,
         domain_unittest_library,
-        pending_library,
+        utility_library,
         domain_api,
         'casual-common',
         'casual-xatmi',
@@ -233,7 +214,7 @@ target_test_domain = make.LinkUnittest( 'bin/test-casual-domain',
     ]) 
 
 # We use domain-manager and simple-server from the unittests
-make.Dependencies( target_test_domain, [ target_domain_manager, target_simple_server, pending_executable, discovery_executable])
+make.Dependencies( target_test_domain, [ target_domain_manager, target_simple_server, discovery_executable])
 
 
 
